--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
     }
 
     function goToYes() {
-        // Create celebration effect
+         window.location.href = "yes.html";
         document.body.style.background = "linear-gradient(135deg, #ff4d6d 0%, #dc264f 100%)";
         
         // You can redirect to yes.html or show a message
@@ -353,4 +353,5 @@
 </script>
 
 </body>
+
 </html>
